Support for Scala 3.