@@ -1,6 +1,9 @@
-val scala212 = "2.12.13"
-val scala213 = "2.13.4"
-val supportedScalaVersions = List(scala212, scala213)
+val scala213 = "2.13.16"
+val scala3 = "3.3.6"
+val supportedScalaVersions = List(scala213, scala3)
+
+ThisBuild / scalaVersion := scala213
+ThisBuild / crossScalaVersions := supportedScalaVersions
 crossScalaVersions := supportedScalaVersions
 publishArtifact := false
 publish := {}
@@ -12,27 +15,39 @@ lazy val commonSettings = Seq(
   version := "1.1.2",
   scalaVersion := scala213,
   crossScalaVersions := supportedScalaVersions,
-  scalacOptions := Seq(
-    "-encoding", "UTF-8", "-target:jvm-1.8", "-deprecation",
-    "-language:experimental.macros",
-//    "-Ymacro-annotations",
+  scalacOptions ++= Seq(
+    "-encoding", "UTF-8",
+    "-release:17",
+    "-deprecation",
     "-feature",
     "-unchecked",
-    "-language:implicitConversions",
-    "-language:postfixOps"
+  ) ++ (CrossVersion.partialVersion(scalaVersion.value) match {
+    case Some((2, _)) => Seq(
+      "-language:experimental.macros",
+      "-language:implicitConversions",
+      "-language:postfixOps",
+    )
+    case _ => Seq(
+      "-language:implicitConversions",
+    )
+  }),
+  libraryDependencies ++= Seq(
+    "org.playframework" %% "play-json" % "3.0.6",
+    "ch.qos.logback" % "logback-classic" % "1.2.3",
+    "org.scalatest" %% "scalatest" % "3.2.19" % Test,
+    "joda-time" % "joda-time" % "2.12.7" % Test,
   ),
-  libraryDependencies += "com.typesafe.play" %% "play-json" % "2.8.1",
-  libraryDependencies += "ch.qos.logback" % "logback-classic" % "1.2.3",
-  libraryDependencies += "org.scala-lang" % "scala-reflect" % scalaVersion.value,
-  libraryDependencies += "org.scalatest" %% "scalatest" % "3.1.1" % Test,
+  libraryDependencies ++= {
+    CrossVersion.partialVersion(scalaVersion.value) match {
+      case Some((2, _)) => Seq("org.scala-lang" % "scala-reflect" % scalaVersion.value)
+      case _ => Nil
+    }
+  },
   licenses += ("MIT", url("https://opensource.org/licenses/MIT")),
   coverageExcludedPackages := "<empty>",
 
   Test / fork := true,
-  Test / javaOptions += "-Xmx4G",
-  Test / javaOptions += "-XX:+CMSClassUnloadingEnabled",
-  Test / javaOptions += "-XX:+UseConcMarkSweepGC",
-  Test / javaOptions += "-Dfile.encoding=UTF-8",
+  Test / javaOptions += "-Xmx1G",
 )
 
 lazy val core = (project in file("core"))
@@ -41,8 +56,14 @@ lazy val core = (project in file("core"))
     api)
   .settings(
     commonSettings,
-    publishTo := Some("nullvector" at "https://nullvector.jfrog.io/artifactory/releases"),
-    credentials += Credentials(Path.userHome / ".jfrog" / "credentials"),
+    publishMavenStyle := true,
+    publishTo := Some("GitHub Package Registry" at "https://maven.pkg.github.com/null-vector/play-json-mapping"),
+    credentials ++= {
+      val token = sys.env.get("GITHUB_TOKEN")
+      token.toSeq.map { t =>
+        Credentials("GitHub Package Registry", "maven.pkg.github.com", "_", t)
+      }
+    },
     Compile / packageDoc / publishArtifact := false,
     Compile / packageBin / mappings ++= (macros / Compile / packageBin / mappings).value,
     Compile / packageSrc / mappings ++= (macros / Compile / packageSrc / mappings).value,
